Last test fix